# bookmarks

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml  flake.nix
.github/workflows/: mdbook.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  basic-usage.md  changelog.md  chapter_1.md  cli.md  config-options.md  configuration.md  contributing.md  installation.md  quick-start.md
src/: cli.rs  main.rs
