[package]
name = "bookmarks"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.1-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
colored = "3.1.1"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"

[build-dependencies]
clap_mangen = "0.3.0"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
